# sciborg

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  requirements.txt
ai/agents/: core.py  newcore.py  pubchem_agent.py  rag_agent.py
ai/chains/: core.py  microservice.py  workflow.py
ai/memory/: embedding.py  internal_logging.py
ai/prompts/: Prompt.py  agent.py  memory.py  workflow.py
ai/schema/: command.py  parameter.py  scheduler.py  workflow.py
ai/tools/: Tools.py  constants.py  core.py  rag_tool.py
core/command/: base.py  core.py
core/parameter/: base.py
core/workflow/: base.py
notebooks/SI/: SI_benchmarks_01.ipynb  SI_benchmarks_02.ipynb  SI_benchmarks_03.ipynb  SI_traces_01.ipynb  SI_traces_02.ipynb
sciborg/: __init__.py
sciborg/ai/: __init__.py
sciborg/ai/agents/: __init__.py  core.py  newcore.py  pubchem_agent.py  rag_agent.py
sciborg/ai/chains/: __init__.py  core.py  microservice.py  workflow.py
sciborg/ai/memory/: __init__.py  embedding.py  internal_logging.py
sciborg/ai/prompts/: __init__.py  agent.py  memory.py  optimizer.py
sciborg/ai/schema/: __init__.py  command.py  parameter.py  scheduler.py  workflow.py
sciborg/ai/tools/: Tools.py  __init__.py  constants.py  core.py  rag_tool.py
sciborg/core/: __init__.py
sciborg/core/command/: __init__.py  base.py
sciborg/core/parameter/: __init__.py
sciborg/core/workflow/: __init__.py  base.py
sciborg/embeddings/: README.md
sciborg/embeddings/NIH_docs_embeddings/: index.faiss
sciborg/utils/: __init__.py
sciborg/utils/benchmarking/: __init__.py  output.py  path.py  state.py
sciborg/utils/drivers/: MicrowaveSynthesizerObject.py  __init__.py  grantsGovCaller.py  ragCaller.py
testing/models/drivers/: LiquidHandler.py  MicrowaveSynthesizer.py  MicrowaveSynthesizerObject.py  PubChemCaller.py
tests/: README.md  test_agent_integration.py  test_dependencies.py  test_workflow_chains.py
tests/notebooks/: experiment2.ipynb  experiment3.ipynb  experimental.ipynb
tests/scripts/: raw_testall.py
utils/: __init__.py
utils/benchmarking/: base.py  output.py  path.py  state.py
utils/drivers/: PubChemCaller.py  __init__.py  ragCaller.py
utils/interpreter/: base.py
